fix(aci-toggle): info badge vertical alignment

--- a/src/features/advanced-content-insights/AdvancedContentInsightsToggle.scss
+++ b/src/features/advanced-content-insights/AdvancedContentInsightsToggle.scss
@@ -5,4 +5,8 @@
 .AdvancedContentInsightsToggle-icon {
     display: inline-block;
     margin-left: 5px;
+
+    > svg {
+        vertical-align: middle;
+    }
 }
